## 0.2.0 / 2018-03-30

* [FEATURE] (UI) Add latest 5 builds status on project list.
* [FEATURE] (Brigade) Project hast the information of the latest 5 builds.
* [FEATURE] (UI) Allow going back with left arrow.
* [BUGFIX]  (UI) Set ESC as home key instead of F1.
* [FEATURE] (UI) Allow reloading projects on home window (project list).
* [FEATURE] (UI) Add exit/quit key combination.
* [FEATURE] (UI) Different colors and icons to states of jobs, builds, projects.
* [FEATURE] (Brigade) Add pending and unknown states.
* [BUGFIX]  (k8s) When no namespace is specified use default namespace.

## 0.1.1 / 2018-03-23

* [BUGFIX] (UI) Fix not showing any project on project list when one of the projects has 0 builds.

## 0.1.0 / 2018-03-22

* [FEATURE] (UI) Project list.
* [FEATURE] (UI) Build list.
* [FEATURE] (UI) Job list.
* [FEATURE] (UI) Job pipeline graph.
* [FEATURE] (UI) Job log.