@@ -36,7 +36,7 @@
 
 [[constraint]]
   name = "github.com/Azure/brigade"
-  version = "v0.12.0"
+  version = "v0.13.0"
 
 [prune]
   go-tests = true
