@@ -1,3 +1,7 @@
+## x.x.x / 2018-xx-xx
+
+* [ENHACEMENT] (Brigade) Update to Brigade v0.13
+
 ## 0.2.0 / 2018-03-30
 
 * [FEATURE] (UI) Add latest 5 builds status on project list.
